--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,389 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap");
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --DarkText: hsl(229, 25%, 31%);
+  --ScoreText: hsl(229, 64%, 46%);
+  --HeaderOutline: hsl(217, 16%, 45%);
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --ScissorsGradient: hsl(39, 89%, 49%) to hsl(40, 84%, 53%);
+  --PaperGradient: hsl(230, 89%, 62%) to hsl(230, 89%, 65%);
+  --RockGradient: hsl(349, 71%, 52%) to hsl(349, 70%, 56%);
+  --LizardGradient: hsl(261, 73%, 60%) to hsl(261, 72%, 63%);
+  --Cyan: hsl(189, 59%, 53%) to hsl(189, 58%, 57%);
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --Background: hsl(214, 47%, 23%) to hsl(237, 49%, 15%);
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.container {
+  position: relative;
+  min-height: 830px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.header {
+  width: 80%;
+  min-height: 120px;
+  margin-top: 50px;
+  padding: 10px;
+  border: 5px solid var(--HeaderOutline);
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.logo {
+  width: 100px;
+}
+.title {
+  padding-top: 10px;
+  width: 90%;
+  height: 80%;
+}
+.result {
+  width: 30%;
+  height: 90%;
+  background: #fff;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.result p {
+  margin-top: 10px;
+  color: var(--DarkText);
+  font-weight: 600;
+  letter-spacing: 0.2px;
+}
+.result h1 {
+  padding-bottom: 5px;
+}
+.board {
+  margin-top: 80px;
+}
+.symbols {
+  background-image: url(/images/bg-triangle.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 450px;
+  width: 400px;
+}
+.symbols .effect {
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.symbols .effect:hover {
+  transform: translate3d(0px, -8px, 0px);
+}
+.symbols img, .mobile-board img {
+  width: 150px;
+  height: 150px;
+}
+.mobile-board img {
+  width: 130px;
+  height: 130px;
+}
+.scissors {
+  margin-left: 50px;
+}
+.footer {
+  position: absolute;
+  bottom: 10px;
+}
+.rules {
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 0.5em 2.3em;
+  font-size: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.mobile-board {
+  margin-top: 100px;
+  padding: 10px;
+  display: flex;
+  color: #fff;
+  min-height: 200px;
+  width: 90%;
+  justify-content: space-between;
+}
+.cpu {
+  margin-left: 50px;
+}
+.mobile-summary {
+  margin-top: 50px;
+  margin-bottom: 150px;
+  display: flex;
+  color: #fff;
+  flex-direction: column;
+  align-items: center;
+}
+.play {
+  margin-top: 10px;
+  background: #fff;
+  color: var(--DarkText);
+  font-weight: 600;
+  padding: 1em 4.5em;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.play:hover {
+  color: hsl(349, 71%, 52%);
+}
+.mobile-summary h1 {
+  font-size: 3rem;
+}
+.user {
+  margin-left: 10px;
+}
+.user, .cpu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.mobile-board h3 {
+  margin-top: 20px;
+  font-size: 0.8rem;
+}
+.game-board, .rules-bg {
+  display: none;
+}
+.mobile-guideline {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  inset: 0 0 0 0;
+  transition: opacity 0.4s ease, visibility 0.4s ease,
+    transform 0.5s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  z-index: 500;
+  overflow: auto;
+}
+.mobile-guideline.open {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+}
+.mobile-guideline h2 {
+  margin-top: 30px;
+}
+.mobile-close {
+  width: 30px;
+  height: 30px;
+  color: rgb(177, 172, 172);
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+.close:hover {
+  color: rgb(54, 52, 52);
+}
+@media screen and (min-width: 670px) {
+  .container {
+    max-width: 1000px;
+    margin: auto;
+  }
+  .mobile-board, .mobile-summary, .mobile-guideline {
+    display: none;
+  }
+  .header {
+    width: 70%;
+  }
+  .result {
+    width: 15%;
+  }
+  .result p {
+    font-size: 12px;
+    letter-spacing: 0.5px;
+  }
+  .board {
+    margin-top: 50px;
+  }
+  .symbols {
+    width: 650px;
+  }
+  .scissors {
+    margin-left: 230px;
+  }
+  .rock {
+    margin-top: 80px;
+  }
+  .game-board {
+    display: flex;
+    width: 90%;
+    margin-top: 80px;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    height: 300px;
+  }
+  .game-board h3 {
+    margin-bottom: 30px;
+    letter-spacing: 1.5px;
+  }
+  .game-board img {
+    width: 300px;
+    height: 300px;
+  }
+  .user, .cpu {
+    height: 100%;
+    justify-content: center;
+    margin-left: 0;
+  }
+  .summary h1 {
+    font-size: 3rem;
+  }
+  .play {
+    text-align: center;
+  }
+  .footer {
+    right: 10px;
+  }
+  .rules-bg {
+    position: absolute;
+    inset: 0 0 0 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: opacity 0.4s ease, visibility 0.4s ease,
+    transform 0.5s ease-in-out;
+    visibility: visible;
+    opacity: 1;
+    display: block;
+  }
+  .rules-bg.quit {
+    visibility: hidden;
+    opacity: 0;
+  }
+  .guideline {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    inset: 130px 450px 10px 450px;
+    transition: opacity 0.4s ease, visibility 0.4s ease,
+      transform 0.5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    z-index: 500;
+    overflow: auto;
+    border-radius: 5px;
+  }
+  .guideline.open {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+  }
+  .guideline-flex {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .close {
+    width: 30px;
+    height: 30px;
+    color: rgb(177, 172, 172);
+    cursor: pointer;
+  }
+}
+@media (min-width: 670px) and (max-width: 1000px) {
+  .game-board {
+    margin-top: 150px;
+  }
+  .game-board img {
+    width: 230px;
+    height: 230px;
+  }
+  .summary h1 {
+    font-size: 2rem;
+  }
+  .play {
+    padding: 1em 2em;
+  }
+  .footer {
+    bottom: 10px;
+  }
+  .guideline {
+    inset: 150px 160px 430px 160px;
+  }
+  .guideline img {
+    width: 300px;
+    height: 300px;
+  }
+  .symbols {
+    margin-top: 50px;
+    background-position: 50% 80px;
+    width: 750px;
+    padding-left: 150px;
+  }
+  .symbols img {
+    width: 180px;
+    height: 180px;
+  }
+  .rock {
+    margin-top: 50px;
+  }
+  .paper, .rock, .scissors {
+    width: 50%;
+  }
+  .scissors {
+    margin: 0 ;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .guideline {
+    inset: 140px 278px 620px 278px;
+  }
+}
+@media (min-width: 1025px) {
+  .symbols {
+    margin-top: 0;
+    background-size: 400px;
+    background-position: 50% 80px;
+    width: 900px;
+  }
+  .symbols img {
+    width: 200px;
+    height: 200px;
+  }
+  .rock {
+    margin-top: 100px;
+    margin-left: 150px;
+  }
+  .paper, .rock, .scissors {
+    width: 40%;
+  }
+  .paper {
+    margin-left: 150px;
+  }
+  .scissors {
+    margin: 0 ;
+  }
+  .footer {
+    bottom: 10px;
+  }
+  .guideline {
+    inset: 140px 380px 20px 380px;
+  }
+  .beats {
+    width: 300px;
   }
 }
