--- a/app/globals.css
+++ b/app/globals.css
@@ -194,6 +194,7 @@ body {
 .close:hover {
   color: rgb(54, 52, 52);
 }
+
 @media screen and (min-width: 670px) {
   .container {
     max-width: 1000px;
@@ -304,7 +305,7 @@ body {
     cursor: pointer;
   }
 }
-@media (min-width: 670px) and (max-width: 1000px) {
+@media (min-width: 670px) and (max-width: 840px) {
   .game-board {
     margin-top: 150px;
   }
@@ -319,7 +320,7 @@ body {
     padding: 1em 2em;
   }
   .footer {
-    bottom: 10px;
+    bottom: 50px;
   }
   .guideline {
     inset: 150px 160px 430px 160px;
@@ -348,12 +349,88 @@ body {
     margin: 0 ;
   }
 }
-@media (min-width: 1000px) and (max-width: 1200px) {
+@media (min-width: 840px) and (max-width: 900px) {
   .guideline {
-    inset: 140px 278px 620px 278px;
+    inset: 0 0 0 0;
+  }
+  .guideline-flex {
+    width: 50%;
+  }
+  .summary h1 {
+    font-size: 2rem;
+  }
+  .play {
+    padding: 1em 1.8em;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 900px) and (max-width: 1200px) {
+  .container {
+    min-height: 1000px;
+  }
+  .header {
+    width: 90%;
+    min-height: 150px;
+  }
+  .logo {
+    width: 150px;
+  }
+  .result {
+    width: 15%;
+    height: 100px;
+    justify-content: center;
+  }
+  .result p {
+    font-size: 1.3rem;
+  }
+  .result h1 {
+    font-size: 3rem;
+  }
+  .guideline {
+    inset: 0 0 0 0;
+  }
+  .guideline-flex {
+    width: 60%;
+    height: 200px;
+  }
+  .beats {
+    width: 400px;
+    height: 95%;
+  }
+  .game-board {
+    margin-top: 200px;
+  }
+  .board {
+    width: 950px;
+  }
+  .symbols {
+    margin-top: 60px;
+    background-size: 500px;
+    background-position: 50% 80px;
+    width: 100%;
+  }
+  .symbols img {
+    width: 280px;
+    height: 280px;
+  }
+  .footer {
+    bottom: 0;
+  }
+  .rules {
+    padding: 1em 3em;
+    font-size: 12px;
+    border-radius: 10px;
+  }
+  .summary h1 {
+    font-size: 2.5rem;
+  }
+  .play {
+    padding: 1em 1.8em ;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    min-height: 800px;
+  }
   .symbols {
     margin-top: 0;
     background-size: 400px;
@@ -381,9 +458,18 @@ body {
     bottom: 10px;
   }
   .guideline {
-    inset: 140px 380px 20px 380px;
+    inset: 24% 30% 10% 30%;
+    justify-content: space-around;
+  }
+  .guideline-flex {
+    width: 80%;
+    margin: 10px;
+  }
+  .guideline-img {
+    width: 400px;
   }
   .beats {
-    width: 300px;
+    width: 90%;
+    margin-left: 20px;
   }
 }
