--- a/app/globals.css
+++ b/app/globals.css
@@ -23,12 +23,33 @@ body {
   font-family: "Barlow Semi Condensed", sans-serif;
   background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
+a {
+  text-decoration: none;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  letter-spacing: 1.5px;
+  color: hsl(237, 49%, 15%);
+}
 .container {
   position: relative;
   min-height: 830px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.login {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.log.header {
+  margin-top: 0;
+}
+.triangle {
+  width: 70px;
+  height: 70px;
+  color: hsl(237, 49%, 15%);
 }
 .header {
   width: 80%;
@@ -309,6 +330,7 @@ body {
     cursor: pointer;
   }
 }
+
 @media (min-width: 670px) and (max-width: 840px) {
   .game-board {
     margin-top: 150px;
@@ -517,3 +539,4 @@ body {
     margin-top: 150px;
   }
 }
+
