--- a/app/globals.css
+++ b/app/globals.css
@@ -48,10 +48,12 @@ a {
 }
 .log.header {
   margin-top: 0;
+  height: 100px;
 }
 .triangle {
-  width: 70px;
-  height: 70px;
+  margin-top: 5px;
+  width: 95%;
+  height: 95%;
   color: hsl(237, 49%, 15%);
 }
 .header {
