--- a/app/globals.css
+++ b/app/globals.css
@@ -23,9 +23,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Barlow Semi Condensed", sans-serif;
 }
 body {
-  font-family: "Barlow Semi Condensed", sans-serif;
   background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
 a {
@@ -85,6 +85,7 @@ a {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 .result p {
@@ -95,6 +96,9 @@ a {
 }
 .result h1 {
   padding-bottom: 5px;
+}
+.score {
+  height: 50px;
 }
 .board {
   display: flex;
@@ -306,8 +310,11 @@ a {
   height: 120px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 20px;
 }
 .rules {
   color: #fff;
@@ -374,7 +381,7 @@ a {
   position: absolute;
   width: 150px;
   height: 150px;
-  top: 33.5%;
+  top: 34%;
   left: 5%;
   border-radius: 50%;
 }
@@ -397,7 +404,7 @@ a {
   position: absolute;
   width: 150px;
   height: 150px;
-  top: 33.5%;
+  top: 34%;
   right: 5%;
   border-radius: 50%;
 }
@@ -606,6 +613,9 @@ a {
     width: 20%;
     min-height: 80%;
   }
+  .score {
+    height: 45px;
+  }
   .start.result {
     width: 15%;
   }
@@ -758,9 +768,6 @@ a {
     text-align: center;
     letter-spacing: 5px;
   }
-  .footer {
-    right: 10px;
-  }
   .rules-bg {
     position: fixed;
     inset: 0 0 0 0;
@@ -817,6 +824,12 @@ a {
   .reset {
     margin-top: 0;
   }
+  .footer {
+    width: 95%;
+    display: flex;
+    justify-content: flex-end;
+    margin: 100px 0 20px 0;
+  }
 }
 @media (min-width: 670px) and (max-width: 840px) {
   .game-board {
@@ -867,11 +880,18 @@ a {
   .play {
     padding: 1em 0.5em;
   }
-  .footer {
-    bottom: 30px;
-  }
   .guideline-flex {
     width: 70%;
+  }
+  .guideline {
+    inset: 150px 150px 130px 150px;
+    justify-content: space-evenly;
+  }
+  .guideline-img {
+    width: 350px;
+  }
+  .beats {
+    width: 100%;
   }
   .symbols {
     margin-top: 50px;
@@ -931,12 +951,18 @@ a {
     left: 12%;
   }
   .footer {
-    top: 117%;
+    margin: 150px 0 20px 0;
   }
 }
 @media (min-width: 719px) and (max-width: 750px) {
   .guideline {
     height: 90%;
+  }
+  .guideline-img {
+    width: 250px;
+  }
+  .beats {
+    width: 100%;
   }
   .game-board {
     margin-top: 50px;
@@ -956,23 +982,25 @@ a {
     top: 37%;
     right: 5%;
   }
-  .footer {
-    top: 114%;
-  }
 }
 @media (min-width: 840px) and (max-width: 900px) {
   .container {
     min-height: 500px;
   }
   .guideline {
-    height: 70%;
+    height: 80%;
     width: 40%;
+    justify-content: space-evenly;
+    inset: 150px 150px 130px 150px;
   }
   .guideline-flex {
     width: 90%;
   }
+  .guideline-img {
+    width: 280px;
+  }
   .beats {
-    width: 200px;
+    width: 100%;
   }
   .result p {
     font-size: 1rem;
@@ -981,29 +1009,33 @@ a {
     font-size: 2rem;
   }
   .summary h1 {
-    font-size: 2rem;
+    font-size: 2.4rem;
   }
   .play {
-    padding: 1em 1em;
+    padding: 1em 2.5em;
     letter-spacing: 1px;
   }
   .win::before,
   .win::after {
     width: 200px;
     height: 200px;
-    top: 67%;
-    left: 11.5%;
+    top: 62%;
+    left: 8%;
   }
   .cpu-win::before,
   .cpu-win::after {
     width: 200px;
     height: 200px;
-    top: 67%;
-    right: 10.5%;
+    top: 62%;
+    right: 8%;
   }
   .win::before,
   .cpu-win::before {
-    transform: scale(1.6);
+    transform: scale(1.3);
+  }
+  .win::after,
+  .cpu-win::after {
+    transform: scale(1.7);
   }
   .choice.spock,
   .choice.lizard,
@@ -1011,12 +1043,12 @@ a {
   .choice.paper,
   .choice.scissors {
     margin: 0 80px 50px 20px;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
   }
   .user-img {
-    width: 130px;
-    height: 130px;
+    width: 100px;
+    height: 100px;
     margin-top: 30px;
   }
   .img-wrapper.choice {
@@ -1075,14 +1107,11 @@ a {
     top: 12%;
     left: 12%;
   }
-  .summary h1 {
-    font-size: 1.7rem;
-  }
   .reset {
     z-index: 0;
   }
   .footer {
-    top: 140%;
+    margin: 220px 0 20px 0;
   }
 }
 @media (min-width: 913px) and (max-width: 1200px) {
@@ -1099,13 +1128,19 @@ a {
     font-size: 1.5rem;
   }
   .result h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .guideline {
     height: 80%;
   }
   .guideline-flex {
     width: 80%;
+  }
+  .guideline-img {
+    width: 280px;
+  }
+  .beats {
+    width: 100%;
   }
   .game-board {
     height: 500px;
@@ -1233,13 +1268,10 @@ a {
     height: 120px;
     margin: 40px 0 0 40px;
   }
-  .footer {
-    bottom: 0;
-  }
   .rules {
-    padding: 1em 3em;
+    padding: 0.5em 2em;
     font-size: 12px;
-    border-radius: 10px;
+    border-radius: 5px;
   }
   .summary {
     margin: 80px 0 0 50px;
@@ -1257,7 +1289,7 @@ a {
     z-index: 100;
   }
   .footer {
-    top: 117%;
+    margin: 220px 0 20px 0;
   }
 }
 @media (min-width: 900px) and (max-width: 914px) {
@@ -1268,12 +1300,15 @@ a {
     width: 200px;
   }
   .guideline {
-    height: 40%;
+    height: 600px;
+    width: 50%;
+    justify-content: center;
   }
   .result p {
     font-size: 1.8rem;
   }
   .result h1 {
+    margin-top: -10px;
     font-size: 3.5rem;
   }
   .summary {
@@ -1281,6 +1316,9 @@ a {
   }
   .summary h1 {
     font-size: 2.5rem;
+  }
+  .end {
+    padding: 1em 2em;
   }
   .game-board {
     width: 100%;
@@ -1406,9 +1444,6 @@ a {
   #icon-lizard {
     margin-left: 35px;
   }
-  .footer {
-    top: 132%;
-  }
 }
 @media (min-width: 911px) and (max-width: 913px) {
   .game-board {
@@ -1441,13 +1476,100 @@ a {
     width: 120px;
     height: 120px;
   }
+  .guideline {
+    inset: 150px 150px 130px 150px;
+  }
+  .guideline-img {
+    width: 400px;
+  }
+  .guideline-flex {
+    font-size: 20px;
+  }
+  .close {
+    width: 50px;
+    height: 50px;
+  }
+  .beats {
+    width: 100%;
+  }
+  .footer {
+    margin: 350px 0 20px 0;
+  }
+}
+@media (min-width: 1179px) and (max-width: 1185px) {
+  .win::before,
+  .win::after {
+    width: 280px;
+    height: 280px;
+    top: 40%;
+    left: 6%;
+  }
+  .cpu-win::before,
+  .cpu-win::after {
+    width: 280px;
+    height: 280px;
+    top: 40%;
+    right: 1%;
+  }
+  .choice.spock,
+  .choice.lizard,
+  .choice.rock,
+  .choice.paper,
+  .choice.scissors {
+    position: relative;
+    margin-top: 20px;
+    background: #fff;
+    border-radius: 50%;
+    margin: 0 15px 50px -10px;
+    width: 230px;
+    height: 230px;
+  }
+  .user-img {
+    width: 150px;
+    height: 150px;
+    margin-left: 45px;
+  }
+  .guideline-img {
+    width: 450px;
+  }
+  .guideline-flex {
+    font-size: 20px;
+  }
+  .close {
+    width: 50px;
+    height: 50px;
+  }
+  .beats {
+    width: 100%;
+  }
+  .reset {
+    z-index: 0;
+  }
+  .footer {
+    margin: 200px 0 20px 0;
+  }
 }
 @media (min-width: 1023px) and (max-width: 1030px) {
   .logo {
     width: 20%;
   }
   .guideline {
-    height: 500px;
+    height: 550px;
+    width: 550px;
+    inset: 120px 150px 130px 150px;
+  }
+  .guideline-img {
+    width: 450px;
+  }
+  .guideline-flex {
+    font-size: 20px;
+  }
+  .close {
+    width: 50px;
+    height: 50px;
+  }
+  .beats {
+    width: 100%;
   }
   .game-board {
     margin-top: 50px;
@@ -1460,15 +1582,15 @@ a {
   .win::after {
     width: 280px;
     height: 280px;
-    top: 44%;
-    left: 8%;
+    top: 45%;
+    left: 6%;
   }
   .cpu-win::before,
   .cpu-win::after {
     width: 280px;
     height: 280px;
-    top: 44%;
-    right: 2%;
+    top: 45%;
+    right: 1%;
   }
   .win::before,
   .cpu-win::before {
@@ -1509,7 +1631,7 @@ a {
     margin-bottom: 10px;
   }
   .footer {
-    bottom: 10px;
+    margin: 100px 0 20px 0;
   }
 }
 @media (min-width: 1200px) and (max-width: 1350px) {
@@ -1656,15 +1778,15 @@ a {
   .board {
     min-height: 550px;
   }
-  .footer {
-    bottom: 10px;
-  }
   .guideline-flex {
     margin: 10px;
   }
   .guideline {
     width: 40%;
     height: 70%;
+  }
+  .footer {
+    margin: 0 0 20px 0;
   }
 }
 @media (min-width: 1350px) {
@@ -1679,12 +1801,21 @@ a {
     font-size: 2.3rem;
   }
   .result h1 {
+    margin-top: -10px;
     font-size: 3.5rem;
   }
   .game-board {
     margin-top: 150px;
     width: 100%;
     animation: zoom 0.3s ease-in-out;
+  }
+  .guideline {
+    width: 500px;
+    height: 450px;
+    inset: 150px 150px 150px 150px;
+  }
+  .end {
+    padding: 1em 2em;
   }
   .user,
   .cpu {
@@ -1695,7 +1826,7 @@ a {
     width: 230px;
     height: 230px;
     top: 59%;
-    left: 7%;
+    left: 8%;
   }
   .cpu-win::before,
   .cpu-win::after {
@@ -1796,6 +1927,6 @@ a {
     margin: 40px 0 0 55px;
   }
   .footer {
-    top: 128%;
+    margin: 300px 0 20px 0;
   }
 }
